k6 batch 2: JDK 25 + UseCompactObjectHeaders leads JDK 11 (+7% rps, -22% p95)
- Interleaved 3-round protocol, quieter host (same-side spread 5-8%)
- Medians: 504.5 vs 470.2 rps; p95 144 vs 184 ms; 0 errors
- COH verified active via jcmd; flag is JDK-25-only (structural advantage)
- Two independent batches now lean JDK 25 faster; memory-per-variant
  measurement in flight (report section 7.2 placeholder)